# gimmes

./: .env.example  .gitignore  CLAUDE.md  LEGAL.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/agents/: caddie.md  closer.md  groundskeeper.md  monitor.md  pro.md  scorecard.md  scout.md  starter.md
.claude/skills/caddy-shack/: SKILL.md
.claude/skills/lesson/: SKILL.md
.claude/skills/report/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/scan/: SKILL.md
.claude/skills/tee-time/: SKILL.md
.claude/skills/tour/: SKILL.md
.claude/skills/trade/: SKILL.md
.claude/skills/watch/: SKILL.md
config/: gimmes.example.toml
src/gimmes/: __init__.py  __main__.py  cli.py  config.py  config_wizard.py  init.py
tests/: conftest.py
tests/fixtures/: markets.json  orderbook.json  portfolio.json
tests/integration/: test_database.py  test_kalshi_client.py  test_orders.py  test_websocket.py
tests/unit/: test_advisor.py  test_auth.py  test_autonomous_loop.py  test_client.py  test_clubhouse.py  test_config_wizard.py  test_daily_pnl.py  test_data_collection.py  test_error_logging.py  test_fee_cache.py  test_fees.py  test_fill_simulator.py  test_init.py  test_kelly.py  test_limits.py  test_mark_to_market.py  test_metrics.py  test_models.py  test_order_error_handling.py  test_orders.py  test_paper_broker.py  test_pnl.py  test_portfolio_parse.py  test_run_error_handling.py  test_scanner.py  test_scorer.py  test_session.py  test_sync_positions.py  test_toml_config.py  test_tour_guide.py  test_validator.py  test_websocket.py
(+43 files in other folders)
